fix: avoid horizontal scrollbar (#6491)
- fix: shortcut menu width with show in chat button
- fix: word-breaks for messages
- replace deprecated word-wrap & word-break: break-word rules (now overflow-wrap)
- hide reaction button for saved messages

--- a/packages/frontend/scss/dialogs/_qr-code.scss
+++ b/packages/frontend/scss/dialogs/_qr-code.scss
@@ -55,7 +55,7 @@
 
 .copy-content-preview {
   background-color: var(--buttonSecondaryBackground);
-  word-wrap: break-word;
+  overflow-wrap: break-word;
   word-break: break-all;
   padding: 10px;
 }
